@@ -76,6 +76,12 @@ task integration(type: Test) {
     mustRunAfter test
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 check.dependsOn integration
 
 pmd {
@@ -260,7 +266,7 @@ dependencies {
     implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.10'
 
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.5.7.Final'
-    runtime group: 'org.postgresql', name: 'postgresql', version: '42.2.23'
+    runtime group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
 
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
     testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
@@ -285,6 +291,7 @@ dependencies {
     testCompile group: 'org.pitest', name: 'pitest', version: versions.pitest
     testCompile group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
     testCompile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
     integrationTestImplementation sourceSets.main.runtimeClasspath
     integrationTestImplementation sourceSets.test.runtimeClasspath
